<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_gravity="start|center" android:id="@id/youtube_logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="?ytWordmarkHeader" android:contentDescription="@string/application_name" />
    <LinearLayout android:id="@id/search_layout" android:background="@drawable/search_bar_background_ripple" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <android.support.v7.widget.AppCompatImageView android:id="@id/search_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_menu_search_mtrl_alpha" android:tint="?ytHeaderIcon" android:contentDescription="@string/menu_search" />
        <TextView android:textAppearance="@style/ThemeOverlay.YouTube.ActionBar.Title.Search" android:textSize="@dimen/medium_font_size" android:textColorHint="?ytTextSecondary" android:gravity="start|center" android:id="@id/search_youtube" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/search_hint" android:singleLine="true" android:textAlignment="viewStart" android:paddingStart="6.0dip" />
    </LinearLayout>
</FrameLayout>