<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:yt="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/set_content_header" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginBottom="1.0dip">
        <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textSize="@dimen/small_font_size" android:textColor="#ffcccccc" android:ellipsize="end" android:id="@id/set_content_title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:singleLine="true" android:layout_centerVertical="true" android:layout_marginStart="10.0dip" android:layout_toStartOf="@id/like_button" android:layout_alignParentStart="true" yt:robotoFont="regular" />
        <com.google.android.libraries.youtube.common.ui.TouchImageView android:id="@id/set_shuffle" android:background="?selectableItemBackground" android:padding="12.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/setbar_shuffle" android:contentDescription="@string/accessibility_shuffle" android:layout_alignParentStart="true" />
        <com.google.android.libraries.youtube.common.ui.TouchImageView android:id="@id/set_repeat" android:background="?selectableItemBackground" android:padding="12.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/setbar_repeat" android:layout_alignWithParentIfMissing="true" android:contentDescription="@string/accessibility_repeat" android:layout_toEndOf="@id/set_shuffle" />
        <com.google.android.apps.youtube.app.common.widget.TintableImageView android:theme="@style/Widget.YouTube.Control" android:id="@id/like_button" android:background="?selectableItemBackground" android:padding="12.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/playlist_add_mtrl_alpha" android:layout_alignWithParentIfMissing="true" android:contentDescription="@string/accessibility_save" android:layout_toStartOf="@id/set_share" />
        <com.google.android.apps.youtube.app.common.widget.TintableImageView android:theme="@style/Widget.YouTube.Control" android:id="@id/set_share" android:background="?selectableItemBackground" android:padding="12.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/ic_share_mtrl_alpha" android:layout_alignWithParentIfMissing="true" android:contentDescription="@string/accessibility_share" android:layout_toStartOf="@id/contextual_menu_anchor" />
        <ImageView android:id="@id/contextual_menu_anchor" android:background="?selectableItemBackground" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/ic_setbar_overflow" android:scaleType="fitCenter" android:contentDescription="@string/accessibility_menu" android:paddingStart="12.0dip" android:paddingEnd="18.0dip" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <View android:layout_gravity="bottom" android:id="@id/separator" android:background="@color/set_row_selected_color" android:layout_width="fill_parent" android:layout_height="1.0dip" />
</FrameLayout>