<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="?ytGeneralBackgroundA" android:layout_width="fill_parent" android:layout_height="fill_parent" _xmlns:android="http://schemas.android.com/apk/res/android" _xmlns:tools="http://schemas.android.com/tools" _xmlns:yt="http://schemas.android.com/apk/res-auto" xmlns:_xmlns="xmlns"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:paddingLeft="24.0dip" android:paddingTop="8.0dip" android:paddingRight="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textSize="@dimen/large_font_size" android:textColor="?ytTextPrimary" android:ellipsize="end" android:id="@id/title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/account_switcher_header_title" android:maxLines="1" android:singleLine="@bool/rtl_single_line_true" android:layout_weight="1.0" android:textAlignment="viewStart" res-auto:robotoFont="medium" xmlns:res-auto="http://schemas.android.com/apk/res-auto" />
        <ImageView android:id="@id/add_account" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_marginRight="-18.0dip" android:src="@drawable/ic_account_switcher_add" android:scaleType="center" android:contentDescription="@string/account_switcher_add_account" android:layout_marginEnd="-18.0dip" />
    </LinearLayout>
    <ListView android:id="@id/account_list" android:layout_width="fill_parent" android:layout_height="0.0dip" android:divider="@null" android:layout_weight="1.0" />
    <ListView android:id="@id/account_list_footer" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="@null" />
    <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textColor="?ytTextSecondary" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/sign_out_footer" android:background="?selectableItemBackground" android:paddingLeft="24.0dip" android:paddingRight="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="48.0dip" android:text="@string/account_switcher_sign_out" android:maxLines="1" android:singleLine="@bool/rtl_single_line_true" android:textAlignment="viewStart" style="?textAppearanceSubhead" />
    <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textColor="?ytTextSecondary" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/manage_account_footer" android:background="?selectableItemBackground" android:paddingLeft="24.0dip" android:paddingRight="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="48.0dip" android:text="@string/account_switcher_manage_account" android:maxLines="1" android:singleLine="@bool/rtl_single_line_true" android:textAlignment="viewStart" style="?textAppearanceSubhead" />
    <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textColor="?ytIconActiveButtonLink" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/accounts_help_link" android:background="?selectableItemBackground" android:paddingLeft="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="48.0dip" android:text="@string/learn_more_about_account_options" android:maxLines="1" android:singleLine="@bool/rtl_single_line_true" android:textAlignment="viewStart" android:paddingStart="24.0dip" style="?textAppearanceSubhead" />
</LinearLayout>