<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="?selectableItemBackground" android:paddingTop="2.0dip" android:paddingBottom="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="12.0dip" android:paddingEnd="12.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:yt="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:id="@id/avatar_container" android:background="?selectableItemBackground" android:layout_width="48.0dip" android:layout_height="48.0dip">
        <com.google.android.libraries.youtube.common.ui.CircularImageView android:layout_gravity="center" android:id="@id/avatar" android:layout_width="@dimen/chat_message_author_avatar_size" android:layout_height="@dimen/chat_message_author_avatar_size" android:contentDescription="@string/accessibility_chat_message_author" />
    </FrameLayout>
    <Space android:layout_width="8.0dip" android:layout_height="0.0dip" />
    <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textAppearance="?textAppearanceSubhead" android:id="@id/name" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
    <ImageButton android:id="@id/invite_button" android:background="?selectableItemBackground" android:visibility="gone" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/quantum_ic_person_add_white_24" android:scaleType="centerInside" android:tint="?ytStaticBlue" android:contentDescription="@string/accessibility_invite_button" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" />
    <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textSize="16.0sp" android:textColor="?ytTextSecondary" android:id="@id/invited_label" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/invited_label" android:textAllCaps="true" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" yt:robotoFont="regular" />
</LinearLayout>