<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="bottom" android:orientation="horizontal" android:id="@id/reel_creator_bottom_bar" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textSize="@dimen/reel_primary_font_size" android:textColor="@color/reel_primary_text_color" android:gravity="center_horizontal" android:id="@id/reel_creator_view_count" android:paddingTop="@dimen/reel_player_creator_footer_items_padding_top" android:paddingBottom="@dimen/reel_player_creator_footer_items_padding_bottom" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:drawableTop="@drawable/quantum_ic_visibility_white_24" android:drawablePadding="@dimen/reel_player_creator_footer_items_drawable_padding" android:layout_weight="1.0" android:contentDescription="@string/reel_accessibility_view_count" />
    <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textSize="@dimen/reel_primary_font_size" android:textColor="@color/reel_primary_text_color" android:gravity="center_horizontal" android:id="@id/reel_creator_comment_view_button" android:background="@drawable/reel_rectangle_button_background" android:paddingTop="@dimen/reel_player_creator_footer_items_padding_top" android:paddingBottom="@dimen/reel_player_creator_footer_items_padding_bottom" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:drawableTop="@drawable/quantum_ic_comment_white_24" android:drawablePadding="@dimen/reel_player_creator_footer_items_drawable_padding" android:layout_weight="1.0" android:contentDescription="@null" />
    <View android:visibility="invisible" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
    <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textSize="@dimen/reel_primary_font_size" android:textColor="@color/reel_primary_text_color" android:gravity="center_horizontal" android:id="@id/reel_creator_menu_button" android:background="@drawable/reel_rectangle_button_background" android:paddingTop="@dimen/reel_player_creator_footer_items_padding_top" android:paddingBottom="@dimen/reel_player_creator_footer_items_padding_bottom" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/reel_player_menu_title_text" android:drawableTop="@drawable/quantum_ic_more_horiz_white_24" android:drawablePadding="@dimen/reel_player_creator_footer_items_drawable_padding" android:layout_weight="1.0" android:contentDescription="@string/reel_accessibility_menu" />
</LinearLayout>