<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/player_controls_view" android:background="?ytBrandBackgroundSolid" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:yt="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/controls_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingStart="8.0dip">
        <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textSize="12.0dip" android:textColor="?ytTextPrimary" android:ellipsize="end" android:id="@id/floaty_title" android:paddingTop="12.0dip" android:paddingBottom="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1" android:layout_alignParentTop="true" android:textAlignment="viewStart" android:layout_toStartOf="@id/play_pause_layout" android:layout_alignParentStart="true" yt:robotoFont="regular" />
        <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textSize="10.0dip" android:textColor="@color/white" android:id="@id/ad_badge" android:background="@drawable/ad_badge_background" android:paddingTop="4.0dip" android:paddingBottom="2.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ad_badge" android:maxLines="1" android:includeFontPadding="false" android:layout_below="@id/floaty_title" android:textIsSelectable="false" android:alpha="0.9" android:paddingStart="5.0dip" android:paddingEnd="5.0dip" android:layout_marginEnd="4.0dip" android:layout_alignParentStart="true" yt:robotoFont="regular" />
        <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textSize="@dimen/extra_small_font_size" android:textColor="?ytTextSecondary" android:ellipsize="end" android:id="@id/floaty_subtitle" android:paddingBottom="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1" android:layout_below="@id/floaty_title" android:layout_alignBaseline="@id/ad_badge" android:layout_alignWithParentIfMissing="true" android:textAlignment="viewStart" android:layout_toStartOf="@id/play_pause_layout" android:layout_toEndOf="@id/ad_badge" yt:robotoFont="regular" />
        <ImageView android:id="@id/floaty_close_button" android:background="?selectableItemBackground" android:paddingTop="8.0dip" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/quantum_ic_close_grey600_24" android:scaleType="center" android:layout_alignParentTop="true" android:contentDescription="@string/accessibility_close_button" android:layout_alignParentEnd="true" />
        <FrameLayout android:id="@id/play_pause_layout" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_marginTop="4.0dip" android:layout_alignParentTop="true" android:layout_toStartOf="@id/floaty_close_button">
            <com.google.android.libraries.youtube.common.ui.TouchImageView android:id="@id/floaty_play_pause_button" android:background="?selectableItemBackground" android:layout_width="48.0dip" android:layout_height="fill_parent" android:scaleType="center" android:contentDescription="@string/accessibility_play" />
            <ProgressBar android:layout_gravity="center_vertical" android:id="@id/progress_bar" android:background="@drawable/progress_background" android:layout_width="fill_parent" android:layout_height="fill_parent" style="?android:attr/progressBarStyleHorizontal" />
        </FrameLayout>
    </RelativeLayout>
</FrameLayout>