<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="?ytBrandBackgroundSolid" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:yt="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:id="@id/tristate_contents" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <RelativeLayout android:id="@id/phonebook_contents" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <android.support.v7.widget.Toolbar android:id="@id/toolbar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:elevation="4.0dip" style="@style/ConnectionToolbars" />
            <EditText android:theme="@style/NoAutofillEditText" android:textColorHint="?ytTextSecondary" android:id="@id/edit_text" android:background="?ytGeneralBackgroundA" android:padding="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:drawableLeft="@drawable/quantum_ic_search_grey600_24" android:drawablePadding="16.0dip" android:layout_below="@id/toolbar" android:layout_alignWithParentIfMissing="true" android:inputType="textFilter" android:imeOptions="flagNoExtractUi" android:layout_toStartOf="@id/cancel_search" android:layout_alignParentStart="true" />
            <ImageView android:id="@id/cancel_search" android:padding="16.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/quantum_ic_clear_grey600_24" android:layout_above="@id/divider" android:layout_below="@id/toolbar" android:contentDescription="@string/accessibility_clear_search" android:layout_alignParentEnd="true" />
            <View android:id="@id/divider" android:background="?ytSeparator" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_below="@id/edit_text" />
            <android.support.v7.widget.RecyclerView android:id="@id/list" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/divider" android:layout_alignParentBottom="true" android:layout_alignWithParentIfMissing="true" />
            <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textSize="@dimen/medium_font_size" android:textColor="?ytTextSecondary" android:gravity="center_horizontal" android:id="@id/no_results_text" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:layout_below="@id/divider" yt:robotoFont="regular" />
            <com.google.android.libraries.quantum.snackbar.Snackbar android:id="@id/snackbar" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" />
        </RelativeLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/empty_contents" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textSize="@dimen/medium_font_size" android:textColor="?ytTextSecondary" android:gravity="center" android:id="@id/empty_message_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="16.0dip" yt:robotoFont="regular" />
            <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textSize="@dimen/medium_font_size" android:textColor="?colorPrimaryAlternate" android:id="@id/close_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="56.0dip" android:text="@string/phonebook_empty_close" android:textAllCaps="true" yt:robotoFont="regular" />
        </LinearLayout>
    </FrameLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/tristate_error" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textSize="@dimen/medium_font_size" android:textColor="?ytTextSecondary" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="16.0dip" android:text="@string/error_message" yt:robotoFont="regular" />
        <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textSize="@dimen/medium_font_size" android:textColor="?colorPrimaryAlternate" android:id="@id/retry_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="56.0dip" android:text="@string/yt_lib_common_retry" android:textAllCaps="true" yt:robotoFont="regular" />
    </LinearLayout>
    <RelativeLayout android:id="@id/tristate_loading" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ProgressBar android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" style="@style/ConnectionLargeProgressBar" />
    </RelativeLayout>
</FrameLayout>